Changelog of flooding
===================================================


1.15 (unreleased)
-----------------

- Added a template to view the flooding scenarios, workflows, loggings.

- Added functionality to run scenario from GUI.

- Updated flooding-worker to 1.0

1.14.1 (2012-08-29)
-------------------

Increased flooding-lib to 2.11.1 for a small fix (create excel files
management command didn't work).


1.14 (2012-08-29)
-----------------

Increase flooding-lib to 2.11. Changes since the previous version:

If a user uploading an Excel file for a project has approval rights in
that project, the approval information in that file as read as well.

Error messages on the ROR dashboard has improved, in the sense that they
are actually shown now. There is also a success message.

Invalid approval values (values other than 0 or 1) now result in an
error message instead of being silently ignored.

Increase flooding-lib to 2.10. Changes since the previous version:

- Added functionality to add a workflow_template to new scenario.

- Added migration to create default workflow_templates.

- Add a 'Goedkeuring' sheet to the Excel metadata export. It shows
  scenarioid, scenario identification and scenario name, and the
  approval status for each of the applicable approval rules, plus
  remarks in an extra column. Code for generation and importing is now
  done and unit testing, but not tested "for real" yet because we will
  first make the necessary user interface in a branch.

- Added a 'flooding_lib.sharedproject' sub-app that will hold pages
  and models to do with the ROR and Landelijk gebruik projects.
  A 'ROR dashboard' is now available under /flooding/shared/ror/,
  down- and uploading Excel files per province works.

- Make it mandatory to first collect all the necessary metadata before
  a scenario can be shared.

- Automatically set the value for the 'Metadata complete' approval
  rule when a scenario is accepted into one of the national projects.


