@@ -11,6 +11,8 @@ Changelog of flooding
 
 - Updated flooding-worker to 1.0
 
+- Sort scenarios by id in the template scenarios_processing.html.
+
 1.14.1 (2012-08-29)
 -------------------
 
